# daphne

./: .gitignore  CODEOWNERS  Cargo.toml  Dockerfile.interop_helper  LICENSE  Makefile  README.md  check-all.sh  docker-compose.yaml  run_interop_helper.sh  tmux-helper.sh
crates/dapf/: Cargo.toml  README.md  dapf_test.sh
crates/dapf/src/: cli_parsers.rs  http_client.rs  lib.rs  main.rs  test_durations.rs  test_routes.rs
crates/dapf/src/acceptance/: load_testing.rs  mod.rs  report_generator.rs
crates/dapf/src/functions/: decrypt.rs  helper.rs  hpke.rs  leader.rs  mod.rs  test_routes.rs
crates/daphne/: Cargo.toml
crates/daphne-server/: Cargo.toml  README.md  docker-compose-e2e.yaml
crates/daphne-server/docker/: example-service.Dockerfile
crates/daphne-server/examples/: configuration-cpu-offload.toml  configuration-helper.toml  configuration-leader.toml  service.rs
crates/daphne-server/src/: config.rs  lib.rs  metrics.rs
crates/daphne-server/src/roles/: aggregator.rs  helper.rs  leader.rs  mod.rs
crates/daphne-server/src/router/: aggregator.rs  compute_offload.rs  cpu_offload.rs  extractor.rs  helper.rs  leader.rs  mod.rs  test_routes.rs
crates/daphne-server/src/storage_proxy_connection/: mod.rs
crates/daphne-server/tests/e2e/: e2e.rs  main.rs  test_runner.rs
crates/daphne-service-utils/: Cargo.toml  build.rs
crates/daphne-service-utils/src/: auth.rs  bearer_token.rs  capnproto_payload.rs  config.rs  http_headers.rs  lib.rs  test_route_types.rs
crates/daphne-service-utils/src/capnproto/: base.capnp  mod.rs
crates/daphne-service-utils/src/compute_offload/: compute_offload.capnp  mod.rs
crates/daphne-service-utils/src/cpu_offload/: cpu_offload.capnp  mod.rs
crates/daphne-service-utils/src/durable_requests/: bindings.rs  durable_request.capnp  mod.rs
crates/daphne-worker/: Cargo.toml  build.rs  clippy.toml
crates/daphne-worker-test/: Cargo.toml  README.md  docker-compose-storage-proxy.yaml  wrangler.aggregator.toml  wrangler.storage-proxy.toml
crates/daphne-worker-test/docker/: aggregator.Dockerfile  docker-compose-e2e.yaml  runtests.Dockerfile  storage-proxy.Dockerfile
crates/daphne-worker-test/src/: durable.rs  lib.rs
crates/daphne-worker/src/: lib.rs
crates/daphne-worker/src/aggregator/: config.rs  metrics.rs  mod.rs
crates/daphne-worker/src/durable/: agg_job_response_store.rs  aggregate_store.rs  aggregate_store_v2.rs  aggregation_job_store.rs  helper_state_store.rs  mod.rs  replay_checker.rs  test_state_cleaner.rs
crates/daphne-worker/src/storage/: mod.rs
crates/daphne-worker/src/storage_proxy/: metrics.rs  middleware.rs  mod.rs
crates/daphne-worker/src/tracing_utils/: mod.rs
crates/daphne/benches/: aggregation.rs  pine.rs  vdaf.rs
crates/daphne/src/: audit_log.rs  auth.rs  constants.rs  hpke.rs  lib.rs  metrics.rs  taskprov.rs  testing.rs
crates/daphne/src/error/: aborts.rs  mod.rs
crates/daphne/src/messages/: mod.rs  request.rs  taskprov.rs
crates/daphne/src/pine/: flp.rs  mod.rs  msg.rs  vdaf.rs
crates/daphne_service_utils/: Cargo.toml
daphne/: Cargo.toml  dapf_test.sh
daphne/benches/: aggregation.rs  vdaf.rs
daphne/dapf/: Cargo.toml
daphne/src/: aborts.rs  audit_log.rs  auth.rs  constants.rs  constants_test.rs  dap_error.rs  hpke.rs  hpke_test.rs  lib.rs  messages.rs  messages_test.rs  metrics.rs  roles.rs  roles_test.rs  taskprov.rs  taskprov_test.rs  testing.rs
daphne/src/error/: aborts.rs  mod.rs
daphne/src/messages/: mod.rs  mod_test.rs  taskprov.rs
daphne/src/protocol/: aggregator.rs  client.rs  collector.rs  mod.rs
daphne/src/roles/: aggregator.rs  helper.rs  leader.rs  mod.rs
daphne/src/vdaf/: mastic.rs  mod.rs  mod_test.rs  prio2.rs  prio2_test.rs  prio3.rs  prio3_test.rs  xof.rs
daphne_server/: Cargo.toml  docker-compose-e2e.yaml
daphne_server/docker/: example-service.Dockerfile
daphne_server/examples/: configuration-helper.toml  configuration-leader.toml  configuration.toml  service.rs
daphne_server/src/: lib.rs  worker_connection.rs
daphne_server/src/roles/: aggregator.rs  helper.rs  leader.rs  mod.rs
daphne_server/src/router/: aggregator.rs  helper.rs  leader.rs  mod.rs  test_routes.rs
daphne_server/src/storage_proxy_connection/: cache.rs  kv.rs  mod.rs
daphne_service_utils/: Cargo.toml  build.rs
daphne_service_utils/dapf/: Cargo.toml
daphne_service_utils/dapf/src/: lib.rs  main.rs  test_durations.rs
daphne_service_utils/src/: auth.rs  config.rs  http_headers.rs  lib.rs  metrics.rs  test_route_types.rs
daphne_service_utils/src/durable_requests/: bindings.rs  durable_request.capnp  mod.rs
daphne_worker/: Cargo.toml  wrangler.toml
daphne_worker/src/: auth.rs  auth_test.rs  config.rs  config_test.rs  dap.rs  error_reporting.rs  lib.rs  metrics.rs  storage_proxy.rs  tracing_utils.rs  utils.rs
daphne_worker/src/dap_prototype/: config.rs  mod.rs
daphne_worker/src/durable/: aggregate_store.rs  garbage_collector.rs  helper_state_store.rs  leader_agg_job_queue.rs  leader_batch_queue.rs  leader_col_job_queue.rs  leader_state_store.rs  mod.rs  mod_test.rs  report_store.rs  report_store_test.rs  reports_pending.rs  reports_processed.rs  test_state_cleaner.rs
daphne_worker/src/roles/: aggregator.rs  helper.rs  leader.rs  mod.rs
daphne_worker/src/router/: aggregator.rs  helper.rs  leader.rs  mod.rs  test_routes.rs
daphne_worker/src/storage_proxy/: metrics.rs  mod.rs
daphne_worker/src/tracing_utils/: fields_recording_layer.rs  mod.rs  wasm_timing.rs  workers_json_layer.rs
daphne_worker/tests/: e2e.rs  janus.rs  test_runner.rs
daphne_worker/tests/backend/: helper.env  leader.env  miniflare.Dockerfile  runtests.Dockerfile
daphne_worker_test/: Cargo.toml  README.md  docker-compose-storage-proxy.yaml  helper.env  leader.env  wrangler.storage_proxy.toml  wrangler.toml
daphne_worker_test/docker/: miniflare.Dockerfile  runtests.Dockerfile  storage_proxy.Dockerfile  test.sh
daphne_worker_test/src/: acceptance.rs  lib.rs
daphne_worker_test/tests/: e2e.rs  janus.rs  test_runner.rs
daphne_worker_test/tests/e2e/: e2e.rs  main.rs  test_runner.rs
(+131 files in other folders)
