# SPDX-License-Identifier: BSD-3-Clause

[workspace]
# This is needed to avoid pulling in tokio features in wasm targets, due to new features in version 0.0.18 of the `worker` crate
# See: https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html#details
resolver = "2"

members = [
    "daphne",
    "daphne/dapf",
    "daphne_worker",
    "daphne_worker_test",
    "daphne_server",
    "daphne_service_utils",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[workspace.dependencies]
anyhow = "1.0.79"
assert_matches = "1.5.0"
async-trait = "0.1.77"
axum = "0.6"
base64 = "0.21.7"
bincode = "1.3.3"
cap = "0.1.2"
capnp = "0.18.13"
criterion = { version = "0.5.1", features = ["async_tokio"] }
deepsize = { version = "0.2.0" }
futures = "0.3.30"
getrandom = "0.2.12"
hex = { version = "0.4.3", features = ["serde"] }
hpke-rs = "0.2.0"
hpke-rs-crypto = "0.2.0"
hpke-rs-rust-crypto = "0.2.0"
http = "0.2"
matchit = "0.7.3"
paste = "1.0.14"
prio = "0.16.0"
prometheus = "0.13.3"
rand = "0.8.5"
rand_core = "0.6.4"
rayon = "1.8.1"
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls-native-roots"] }
replace_with = "0.1.7"
ring = "0.17.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde-wasm-bindgen = "0.5.0"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.0", features = ["serde"] }
worker = "0.0.18"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
cast_precision_loss = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
if_not_else = "allow"
default_trait_access = "allow"
items_after_statements = "allow"
redundant_closure_for_method_calls = "allow"
inconsistent_struct_constructor = "allow"
similar_names = "allow"
inline_always = "allow"
no_effect_underscore_binding = "allow"
