# Copyright (c) 2024 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[workspace]
# This is needed to avoid pulling in tokio features in wasm targets, due to new features in version 0.0.18 of the `worker` crate
# See: https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html#details
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.3.0"
authors = [
    "Christopher Patton <cpatton@cloudflare.com>",
    "Armando Faz Hernandez <armfazh@cloudflare.com>",
    "Pedro Mendes <pmendes@cloudflare.com>",
]
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/cloudflare/daphne"
repository = "https://github.com/cloudflare/daphne"

[profile.release]
opt-level = "s"

[profile.release-symbols]
inherits = "release"
opt-level = 3
debug = 1

[workspace.dependencies]
anyhow = "1.0.86"
assert_matches = "1.5.0"
async-trait = "0.1.80"
axum = { version = "0.7.5", default-features = false }
axum-extra = "0.9"
base64 = "0.21.7"
# TODO(mendess): delete. Left here for legacy_req_parse.
bincode = "1.3.3"
bytes = "1"
cap = "0.1.2"
capnp = "0.18.13"
cfg-if = "1.0.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "wasmbind"] }
clap = { version = "4.5.7", features = ["derive"] }
config = "0.13.4"
constcat = "0.5.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
deepsize = { version = "0.2.0" }
futures = "0.3.30"
getrandom = "0.2.15"
hex = { version = "0.4.3", features = ["serde"] }
headers = "0.4"
hpke-rs = "0.2.0"
hpke-rs-crypto = "0.2.0"
hpke-rs-rust-crypto = "0.2.0"
http = "1"
http-body-util = "0.1"
hyper = "0.14.29"
itertools = "0.12.1"
matchit = "0.7.3"
p256 = { version = "0.13.2", features = ["ecdsa-core", "ecdsa", "pem"] }
paste = "1.0.15"
pin-project = "1.1.5"
prio = "0.16.5"
prometheus = "0.13.4"
rand = "0.8.5"
rayon = "1.10.0"
rcgen = "0.12.1"
regex = "1.10.5"
reqwest = { version = "0.11.27", default-features = false, features = ["rustls-tls-native-roots"] }
reqwest-wasm = "0.11.16"
ring = "0.17.8"
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.118"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-service = "0.3"
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = "0.3.18"
url = { version = "2.5.2", features = ["serde"] }
webpki = "0.22.4"
worker = { version = "0.3.3", features = ["http"] }
wasm-streams = "0.4"
x509-parser = "0.15.1"

[workspace.dependencies.sentry]
version = "0.32.3"
default-features = false
features = [
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "reqwest",
    "rustls",
]

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
cast_precision_loss = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
if_not_else = "allow"
default_trait_access = "allow"
items_after_statements = "allow"
redundant_closure_for_method_calls = "allow"
inconsistent_struct_constructor = "allow"
similar_names = "allow"
inline_always = "allow"
no_effect_underscore_binding = "allow"
disallowed_methods = "deny"
