# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne"
description = "Implementation of the DAP specification"
version = "0.3.0"
authors = [
  "Christopher Patton <cpatton@cloudflare.com>",
  "Armando Faz Hernandez <armfazh@cloudflare.com>",
]
edition = "2021"
license = "BSD-3-Clause"
homepage = "https://github.com/cloudflare/daphne"
repository = "https://github.com/cloudflare/daphne"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "aggregation"
harness = false

[dependencies]
async-trait.workspace = true
assert_matches = { workspace = true, optional = true }
base64.workspace = true
futures.workspace = true
hex.workspace = true
hpke-rs = { workspace = true, features = ["hazmat", "serialization"] }
hpke-rs-crypto.workspace = true
hpke-rs-rust-crypto.workspace = true
prio = { workspace = true, features = ["prio2"] }
prometheus.workspace = true
rand.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
assert_matches.workspace = true
criterion.workspace = true
matchit.workspace = true
paste.workspace = true
tokio.workspace = true

[features]
test-utils = ["dep:assert_matches"]
