# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne"
description = "Implementation of the DAP specification"
version = "0.3.0"
authors = [
  "Christopher Patton <cpatton@cloudflare.com>",
  "Armando Faz Hernandez <armfazh@cloudflare.com>",
]
edition = "2021"
license = "BSD-3-Clause"
homepage = "https://github.com/cloudflare/daphne"
repository = "https://github.com/cloudflare/daphne"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait.workspace = true
assert_matches = { workspace = true, optional = true }
base64.workspace = true
deepsize = { version = "0.2.0", optional = true }
hex.workspace = true
hpke-rs = { workspace = true, features = ["hazmat", "serialization"] }
hpke-rs-crypto.workspace = true
hpke-rs-rust-crypto.workspace = true
prio = { workspace = true, features = ["prio2"] }
prometheus.workspace = true
rand.workspace = true
replace_with.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
assert_matches.workspace = true
futures.workspace = true
matchit.workspace = true
paste.workspace = true
regex = "1.10.2"
tokio.workspace = true

[features]
test-utils = ["dep:assert_matches", "dep:deepsize"]
default = []
