# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne"
description = "Implementation of the DAP specification"
version = "0.3.0"
authors = [
  "Christopher Patton <cpatton@cloudflare.com>",
  "Armando Faz Hernandez <armfazh@cloudflare.com>",
  "Pedro Mendes <pmendes@cloudflare.com>",
]
edition = "2021"
license = "BSD-3-Clause"
homepage = "https://github.com/cloudflare/daphne"
repository = "https://github.com/cloudflare/daphne"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait.workspace = true
assert_matches = { workspace = true, optional = true }
base64.workspace = true
deepsize = { workspace = true, optional = true }
hex.workspace = true
hpke-rs = { workspace = true, features = ["hazmat", "serialization"] }
hpke-rs-crypto.workspace = true
hpke-rs-rust-crypto.workspace = true
prio = { workspace = true, features = ["experimental"] }
prometheus = { workspace = true, optional = true }
rand.workspace = true
replace_with.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
assert_matches.workspace = true
criterion.workspace = true
deepsize.workspace = true
futures.workspace = true
matchit.workspace = true
paste.workspace = true
prio = { workspace = true, features = ["test-util"] }
prometheus.workspace = true
regex = "1.10.3"
tokio.workspace = true

[features]
test-utils = ["dep:assert_matches", "dep:deepsize", "dep:prometheus"]
default = []
prometheus = ["dep:prometheus"]

[[bench]]
name = "vdaf"
harness = false

[lints]
workspace = true
