# Copyright (c) 2024 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne_server"
description = "Workers backend for Daphne"
version = "0.3.0"
authors = [
  "Christopher Patton <cpatton@cloudflare.com>",
  "Armando Faz Hernandez <armfazh@cloudflare.com>",
  "Pedro Mendes <pmendes@cloudflare.com>",
]
edition = "2021"
license = "BSD-3-Clause"
homepage = "https://github.com/cloudflare/daphne"
repository = "https://github.com/cloudflare/daphne"
readme = "../README.md"

[dependencies]
axum = "0.7"
daphne = { path = "../daphne", features = ["send-traits"] }
daphne_service_utils = { path = "../daphne_service_utils" }
futures.workspace = true
prio.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower = "0.4.13"
tracing.workspace = true
url.workspace = true

[dev-dependencies]
clap = { version = "4.4.11", features = ["derive"] }
config = "0.13.4"
daphne = { path = "../daphne", features = ["send-traits", "test-utils"] }
rand.workspace = true
tower = "0.4.13"
tracing-subscriber.workspace = true
