# Copyright (c) 2024 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne_server"
description = "Workers backend for Daphne"
version = "0.3.0"
authors = [
  "Christopher Patton <cpatton@cloudflare.com>",
  "Armando Faz Hernandez <armfazh@cloudflare.com>",
  "Pedro Mendes <pmendes@cloudflare.com>",
]
edition = "2021"
license = "BSD-3-Clause"
homepage = "https://github.com/cloudflare/daphne"
repository = "https://github.com/cloudflare/daphne"
readme = "../README.md"

[dependencies]
axum.workspace = true
http.workspace = true
hyper = "0.14.27"
bincode.workspace = true
daphne = { path = "../daphne", features = ["send-traits"] }
daphne_service_utils = { path = "../daphne_service_utils" }
futures.workspace = true
hex.workspace = true
prio.workspace = true
rayon.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = "0.4.13"
tracing.workspace = true
url.workspace = true

[dev-dependencies]
clap = { version = "4.4.11", features = ["derive"] }
config = "0.13.4"
daphne = { path = "../daphne", features = ["send-traits", "test-utils"] }
daphne_service_utils = { path = "../daphne_service_utils", features = ["prometheus"] }
prometheus.workspace = true
rand.workspace = true
tower = "0.4.13"
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
test-utils = ["daphne/test-utils", "daphne_service_utils/test-utils"]
