# Copyright (c) 2024 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne_server"
description = "Workers backend for Daphne"
version = "0.3.0"
authors = [
  "Christopher Patton <cpatton@cloudflare.com>",
  "Armando Faz Hernandez <armfazh@cloudflare.com>",
  "Pedro Mendes <pmendes@cloudflare.com>",
]
edition = "2021"
license = "BSD-3-Clause"
homepage = "https://github.com/cloudflare/daphne"
repository = "https://github.com/cloudflare/daphne"
readme = "../README.md"

[dependencies]
axum.workspace = true
bincode.workspace = true
daphne = { path = "../daphne" }
daphne_service_utils = { path = "../daphne_service_utils" }
futures.workspace = true
hex.workspace = true
http.workspace = true
hyper.workspace = true
p256.workspace = true
prio.workspace = true
rayon.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
clap.workspace = true
config.workspace = true
daphne = { path = "../daphne", features = ["test-utils"] }
daphne_service_utils = { path = "../daphne_service_utils", features = ["prometheus"] }
paste.workspace = true
prometheus.workspace = true
rand.workspace = true
rcgen.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
webpki.workspace = true
x509-parser.workspace = true

[features]
test-utils = ["daphne/test-utils", "daphne_service_utils/test-utils"]

[lints]
workspace = true
