# Copyright (c) 2024 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne_service_utils"
version = "0.3.0"
authors = [
  "Christopher Patton <cpatton@cloudflare.com>",
  "Armando Faz Hernandez <armfazh@cloudflare.com>",
  "Pedro Mendes <pmendes@cloudflare.com>",
]
edition = "2021"
license = "BSD-3-Clause"
homepage = "https://github.com/cloudflare/daphne"
repository = "https://github.com/cloudflare/daphne"
readme = "../README.md"

[dependencies]
capnp.workspace = true
daphne = { path = "../daphne", default-features = false }
hex.workspace = true
http.workspace = true
prometheus.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

[build-dependencies]
capnpc = "0.18.0"

[features]
test-utils = []
