# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne_worker"
description = "Workers backend for Daphne"
version = "0.3.0"
authors = [
  "Christopher Patton <cpatton@cloudflare.com>",
  "Armando Faz Hernandez <armfazh@cloudflare.com>",
]
edition = "2021"
license = "BSD-3-Clause"
homepage = "https://github.com/cloudflare/daphne"
repository = "https://github.com/cloudflare/daphne"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arc-swap = "1.6.0"
async-trait.workspace = true
chrono = { version = "0.4.26", default-features = false, features = ["clock", "wasmbind"] }
daphne = { path = "../daphne" }
futures.workspace = true
hex.workspace = true
matchit.workspace = true
once_cell = "1.18.0"
prio.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest-wasm = { version = "0.11.16", features = ["json"] }
serde-wasm-bindgen = "0.5.0"
serde.workspace = true
serde_json.workspace = true
tracing-core = "0.1.31"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"]}
tracing.workspace = true
worker.workspace = true

[dev-dependencies]
paste.workspace = true
