# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne_worker"
description = "Workers backend for Daphne"
version = "0.3.0"
authors = [
  "Christopher Patton <cpatton@cloudflare.com>",
  "Armando Faz Hernandez <armfazh@cloudflare.com>",
]
edition = "2021"
license = "BSD-3-Clause"
homepage = "https://github.com/cloudflare/daphne"
repository = "https://github.com/cloudflare/daphne"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arc-swap = "1.6.0"
async-trait.workspace = true
bincode = "1.3.3"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "wasmbind"] }
daphne = { path = "../daphne" }
daphne_service_utils = { path = "../daphne_service_utils" }
futures.workspace = true
hex.workspace = true
once_cell = "1.18.0"
prio.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest-wasm = { version = "0.11.16", features = ["json"] }
ring.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"]}
tracing.workspace = true
url.workspace = true
worker.workspace = true

[dev-dependencies]
daphne = { path = "../daphne", features = ["test-utils"] }
paste.workspace = true
