# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne_worker"
description = "Workers backend for Daphne"
version = "0.3.0"
authors = [
  "Christopher Patton <cpatton@cloudflare.com>",
  "Armando Faz Hernandez <armfazh@cloudflare.com>",
  "Pedro Mendes <pmendes@cloudflare.com>",
]
edition = "2021"
license = "BSD-3-Clause"
homepage = "https://github.com/cloudflare/daphne"
repository = "https://github.com/cloudflare/daphne"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode.workspace = true
chrono = { version = "0.4.33", default-features = false, features = ["clock", "wasmbind"] }
daphne = { path = "../daphne", features = ["prometheus"] }
daphne_service_utils = { path = "../daphne_service_utils", features = ["prometheus"] }
futures = { workspace = true, optional = true }
hex.workspace = true
prio.workspace = true
rand.workspace = true
ring.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-core = "0.1.32"
tracing-subscriber = { workspace = true, features = ["env-filter", "json"]}
tracing.workspace = true
url.workspace = true
worker.workspace = true

[dev-dependencies]
daphne = { path = "../daphne", features = ["test-utils"] }
paste.workspace = true

[features]
test-utils = ["daphne_service_utils/test-utils", "dep:futures"]

[lints]
workspace = true
