# Copyright (c) 2024 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "dapf"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
daphne = { path = "../daphne", features = ["test-utils", "prometheus"] }
daphne_service_utils = { path = "../daphne_service_utils" }
deepsize.workspace = true
futures.workspace = true
hex.workspace = true
itertools.workspace = true
pin-project.workspace = true
prio.workspace = true
prometheus.workspace = true
rand.workspace = true
rayon.workspace = true
reqwest = { workspace = true, features = ["json"] }
sentry.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
url.workspace = true
webpki.workspace = true
x509-parser.workspace = true
