# Copyright (c) 2024 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Workers backend for Daphne"

[dependencies]
axum.workspace = true
daphne = { path = "../daphne" }
daphne-service-utils = { path = "../daphne-service-utils", features = ["durable_requests"] }
futures.workspace = true
hex.workspace = true
http.workspace = true
hyper.workspace = true
mappable-rc = "0.1.1"
p256.workspace = true
prio.workspace = true
rayon.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
anyhow.workspace = true
assert_matches.workspace = true
clap.workspace = true
config.workspace = true
daphne = { path = "../daphne", features = ["test-utils"] }
daphne-service-utils = { path = "../daphne-service-utils", features = ["prometheus"] }
hpke-rs.workspace = true
paste.workspace = true
prometheus.workspace = true
rand.workspace = true
rcgen.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
webpki.workspace = true
x509-parser.workspace = true

[features]
test-utils = ["daphne/test-utils", "daphne-service-utils/test-utils"]
test_e2e = []

[lints]
workspace = true
