# Copyright (c) 2024 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Workers backend for Daphne"

[package.metadata."docs.rs"]
all-features = true

[dependencies]
daphne = { path = "../daphne" }
daphne-service-utils = { path = "../daphne-service-utils", features = ["durable_requests"] }
either.workspace = true
futures.workspace = true
hex.workspace = true
http.workspace = true
mappable-rc.workspace = true
p256.workspace = true
prio_09.workspace = true
prometheus = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = { workspace = true, features = ["util"] }
tracing.workspace = true
url.workspace = true

[dependencies.axum]
workspace = true
features = ["query", "json", "tokio", "http1", "http2"]

[dependencies.reqwest]
workspace = true
default-features = false
features = ["rustls-tls-native-roots", "json"]

[dev-dependencies]
anyhow.workspace = true
assert_matches.workspace = true
clap.workspace = true
config.workspace = true
daphne = { path = "../daphne", features = ["test-utils"] }
daphne-service-utils = { path = "../daphne-service-utils", features = ["test-utils"] }
dhat.workspace = true
hpke-rs.workspace = true
paste.workspace = true
prometheus.workspace = true
rand.workspace = true
rcgen.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = ["signal"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
webpki.workspace = true
x509-parser.workspace = true

[features]
default = ["prometheus"]
test-utils = ["daphne/test-utils", "daphne-service-utils/test-utils"]
test_e2e = []
prometheus = ["dep:prometheus", "daphne/prometheus"]

[lints]
workspace = true
