# Copyright (c) 2024 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne-service-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
capnp = { workspace = true, optional = true }
daphne = { path = "../daphne", default-features = false }
futures.workspace = true
itertools.workspace = true
hex.workspace = true
p256.workspace = true
prio.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
tracing.workspace = true
rayon.workspace = true

[dev-dependencies]
daphne = { path = "../daphne", default-features = false, features = ["prometheus"] }
prometheus.workspace = true
rand.workspace = true

[build-dependencies]
capnpc = { version = "0.18.1", optional = true }

[features]
test-utils = ["daphne/prometheus", "daphne/test-utils"]
durable_requests = ["dep:capnp", "dep:capnpc"]

[lints]
workspace = true
