# Copyright (c) 2025 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne-service-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
capnp = { workspace = true, optional = true }
daphne = { path = "../daphne", default-features = false }
prio_draft09 = { workspace = true, optional = true }
prio = { workspace = true, optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
daphne = { path = "../daphne", default-features = false, features = ["prometheus", "test-utils"] }
rand.workspace = true

[build-dependencies]
capnpc = { workspace = true, optional = true }

[features]
test-utils = ["dep:url", "daphne/prometheus", "daphne/test-utils"]
compute-offload = ["dep:capnp", "dep:capnpc", "dep:serde_json", "dep:prio"]
durable_requests = [
    "dep:capnp",
    "dep:capnpc",
    "dep:prio_draft09",
    "dep:prio",
]
experimental = ["daphne/experimental"]

[lints]
workspace = true
