# Copyright (c) 2024 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne-worker-test"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cap.workspace = true
cfg-if.workspace = true
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
daphne = { path = "../daphne", features = ["test-utils", "wasm-compat"] }
daphne-worker = { path = "../daphne-worker", features = ["test-utils"] }
tracing.workspace = true
worker.workspace = true

[lints]
workspace = true
