# Copyright (c) 2025 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne-worker-test"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
async-trait.workspace = true
cap.workspace = true
cfg-if.workspace = true
console_error_panic_hook = { version = "0.1.7", optional = true }
daphne-worker = { path = "../daphne-worker", features = ["test-utils"] }
futures.workspace = true
prometheus.workspace = true
tracing.workspace = true
worker.workspace = true

[lints]
workspace = true
